--- a/index.html
+++ b/index.html
@@ -15,31 +15,30 @@
 </head>
 
 <body>
-    <div>
-       <header class="header">
-            <img class="header__logo" src="assets/images/logo/ohmyfood.png" alt="logo de ohmyfood">
-       </header>
-       <main>
-            <section class="location">
-                <div class="location_zone">
-                    <i class="fa-solid fa-location-dot"></i>
-                    <p>Paris, Belleville</p>
-                </div>
-                <div class="explorer-restaurant">
-                    <h1 class="explorer-restaurant__title">Réserver le menu qui vous convient</h1>
-                    <p class="explorer-restaurant__text">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                    <a href="#anchor-mainrestaurants" class="explorer-restaurant__btn">Explorer nos restaurants</a>
-                </div>
-            </section>  
-            <section class="functioning">
-                <div>
-                    <h2>Fonctionnement</h2>
-                </div>
+    <header class="header">
+        <img class="header__logo" src="assets/images/logo/ohmyfood.png" alt="logo de ohmyfood">
+    </header>
+    <main>
+        <section class="location">
+            <div class="location_zone">
+                <i class="fa-solid fa-location-dot"></i>
+                <p>Paris, Belleville</p>
+            </div>
+            <div class="explorer-restaurants">
+                <h1 class="explorer-restaurants__title">Réserver le menu qui vous convient</h1>
+                <p class="explorer-restaurants__text">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                <a href="#anchor-mainrestaurants" class="explorer-restaurants__btn">Explorer nos restaurants</a>
+            </div>
+        </section>  
+        <section class="functioning">
+            <div>
+                <h2>Fonctionnement</h2>
+            </div>
                 <div class="functioning__steps">
                     <div class="functioning__cards">
                         <span class="functioning__cards--number">1</span>
                         <i class="functioning__cards--icon fa-solid fa-mobile-screen-button"></i>
-                        <p>Choisissez un restaurant</p>
+                        <p>Choisissez un restaurants</p>
                     </div>   
                     <div class="functioning__cards">
                         <span class="functioning__cards--number">2</span>
@@ -49,93 +48,93 @@
                     <div class="functioning__cards">
                         <span class="functioning__cards--number">3</span>
                         <i class="functioning__cards--icon functioning__cards--icolor fa-solid fa-store"></i>
-                        <p>Déguster au restaurant</p>
-                    </div>
+                        <p>Déguster au restaurants</p>
                 </div>
-            </section>
-            <section class="restaurant">
-                <div>
-                    <h2 id="anchor-mainrestaurants">Restaurants</h2>
-                </div>
-                <div class="restautant-cards">
-                    <article class="restaurant-card">
-                        <a class="restaurant-card__link">
-                            <div class="restaurant-card__image">
+            </div>
+        </section>
+        <section class="restaurants">
+            <div>
+                <h2 id="anchor-mainrestaurants">restaurants</h2>
+            </div>
+            <div class="restaurants-cards">
+                <article class="restaurants-card">
+                    <a class="restaurants-card__link">
+                        <div class="restaurants-card__image">
                             <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat de La palette du goût">
-                            <span class="restaurant-card__new-label">Nouveau</span>
+                            <span class="restaurants-card__new-label">Nouveau</span>
+                        </div>
+                        <div class="restaurants-card__info">                               
+                            <div class="restaurants-card__details">
+                                <h3 class="restaurants-card__name">La palette du goût</h3>
+                                <p class="restaurants-card__location">Ménilmontant</p>
                             </div>
-                            <div class="restaurant-card__info">                               
-                                    <div class="restaurant-card__details">
-                                        <h3 class="restaurant-card__name">La palette du goût</h3>
-                                        <p class="restaurant-card__location">Ménilmontant</p>
-                                    </div>
-                                    <button class="restaurant-card__favorite-button">
-                                        <span class="restaurant-card__heart"><i class="far fa-heart fa-2x"></i></span>
-                                        <span class="restaurant-card__new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
-                                    </button>                                
-                            </div>
-                        </a>
-                    </article>
-                    <article class="restaurant-card">
-                        <a href="#" class="restaurant-card__link">
-                            <div class="restaurant-card__image">
+                            <button class="restaurants-card__favorite-button">
+                                <span class="restaurants-card__heart"><i class="far fa-heart fa-2x"></i></span>
+                                <span class="restaurants-card__new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
+                            </button>                                
+                        </div>
+                    </a>
+                </article>
+                <article class="restaurants-card">
+                    <a href="#" class="restaurants-card__link">
+                        <div class="restaurants-card__image">
                             <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat de La note enchantée">
-                            <span class="restaurant-card__new-label">Nouveau</span>
+                            <span class="restaurants-card__new-label">Nouveau</span>
+                        </div>
+                        <div class="restaurants-card__info">                               
+                            <div class="restaurants-card__details">
+                                <h3 class="restaurants-card__name">La note enchantée</h3>
+                                <p class="restaurants-card__location">Charonne</p>
                             </div>
-                            <div class="restaurant-card__info">                               
-                                    <div class="restaurant-card__details">
-                                        <h3 class="restaurant-card__name">La note enchantée</h3>
-                                        <p class="restaurant-card__location">Charonne</p>
-                                    </div>
-                                    <button class="restaurant-card__favorite-button">
-                                        <span class="restaurant-card__heart"><i class="far fa-heart fa-2x"></i></span>
-                                    </button>                               
-                            </div>
-                        </a>
-                    </article>
-                    <article class="restaurant-card">
-                        <a href="#" class="restaurant-card__link">
-                            <div class="restaurant-card__image">
+                            <button class="restaurants-card__favorite-button">
+                                <span class="restaurants-card__heart"><i class="far fa-heart fa-2x"></i></span>
+                            </button>                               
+                        </div>
+                    </a>
+                </article>
+                <article class="restaurants-card">
+                    <a href="#" class="restaurants-card__link">
+                        <div class="restaurants-card__image">
                             <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat d'À la française">
+                        </div>
+                        <div class="restaurants-card__info">                               
+                            <div class="restaurants-card__details">
+                                <h3 class="restaurants-card__name">À la française</h3>
+                                <p class="restaurants-card__location">Cité rouge</p>
                             </div>
-                            <div class="restaurant-card__info">                               
-                                    <div class="restaurant-card__details">
-                                        <h3 class="restaurant-card__name">À la française</h3>
-                                        <p class="restaurant-card__location">Cité rouge</p>
-                                    </div>
-                                    <button class="restaurant-card__favorite-button">
-                                        <span class="restaurant-card__heart"><i class="far fa-heart fa-2x"></i></span>
-                                    </button>                              
-                            </div>
-                        </a>
-                    </article>
-                    <article class="restaurant-card">
-                        <a href="#" class="restaurant-card__link">
-                            <div class="restaurant-card__image">
+                            <button class="restaurants-card__favorite-button">
+                                <span class="restaurants-card__heart"><i class="far fa-heart fa-2x"></i></span>
+                            </button>                              
+                        </div>
+                    </a>
+                </article>
+                <article class="restaurants-card">
+                    <a href="#" class="restaurants-card__link">
+                        <div class="restaurants-card__image">
                             <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat de Le délice des sens">
+                        </div>
+                        <div class="restaurants-card__info">                               
+                            <div class="restaurants-card__details">
+                                <h3 class="restaurants-card__name">Le délice des sens</h3>
+                                <p class="restaurants-card__location">Folie-Méricourt</p>
                             </div>
-                            <div class="restaurant-card__info">                               
-                                    <div class="restaurant-card__details">
-                                        <h3 class="restaurant-card__name">Le délice des sens</h3>
-                                        <p class="restaurant-card__location">Folie-Méricourt</p>
-                                    </div>
-                                    <button class="restaurant-card__favorite-button">
-                                        <span class="restaurant-card__heart"><i class="far fa-heart fa-2x"></i></span>
-                                    </button>                               
-                            </div>
-                        </a>
-                    </article>
-                </div>
-            </section>  
-       </main>
-       <footer class="footer">
+                            <button class="restaurants-card__favorite-button">
+                                <span class="restaurants-card__heart"><i class="far fa-heart fa-2x"></i></span>
+                            </button>                               
+                        </div>
+                    </a>
+                </article>
+            </div>
+        </section>  
+    </main>
+    <footer class="footer">
         <div class="footer__content">
             <div class="footer__logo">
                 <img src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
             </div>
             <div class="footer__links">
                 <ul class="footer__list">
-                    <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-utensils"></i>Proposer un restaurants</a></li>
                     <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Mentions légales</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
@@ -143,7 +142,6 @@
             </div>
         </div>
     </footer> 
-    </div>
 </body>
 
 </html>
