--- a/restaurants/La_palette_du_goût.html
+++ b/restaurants/La_palette_du_goût.html
@@ -4,135 +4,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>La palette du goût</title>
+
+    <link rel="stylesheet" href="../assets/sass/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <script src="https://kit.fontawesome.com/5f93c80563.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div>
-        <header>
-            <div>
-                <div>
-                    <i class="fa-solid fa-arrow-left"></i>
-                </div>
-                <div>
-                    <img src="assets/images/logo/ohmyfood.png" alt="logo de ohmyfood">
+    <header class="header">
+        <nav class="header__nav">
+            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        </nav>
+            <img class="header__logo" src="../assets/images/logo/ohmyfood.png" alt="logo de ohmyfood">
+    </header>
+    <main class="main">
+        <section class="banner">            
+                <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        </section>
+        <section class="restaurant">   
+            <div class="restaurant__info">
+                <h1 class="restaurant__name">La palette du goût</h1>
+                <button class="restaurant__favorite-button">
+                    <span class="restaurant__heart"><i class="far fa-heart fa-2x"></i></span>
+                </button>
+            </div>           
+            <div class="restaurant__menu">
+                <article class="restaurant__category">
+                    <div class="restaurant__category-title">
+                        <h2>ENTRÉES</h2>
+                    </div>
+                    <div class="restaurant__item">
+                        <div class="restaurant__item-info">
+                            <h3 class="restaurant__item-title">Fricassée d'escargots</h3>
+                            <p class="restaurant__item-description">Au piment d'Espelette</p>
+                        </div>
+                        <div class="restaurant__item-price">25€</div>
+                    </div>
+                    <div class="restaurant__item">
+                        <div class="restaurant__item-info">
+                            <h3 class="restaurant__item-title">Foie gras de canard mi-cuit</h3>
+                            <p class="restaurant__item-description">Et ses copeaux de truffe noire</p>
+                        </div>
+                        <div class="restaurant__item-price">35€</div>
+                    </div>
+                    <div class="restaurant__item">
+                        <div class="restaurant__item-info">
+                            <h3 class="restaurant__item-title">Œuf au plat</h3>
+                            <p class="restaurant__item-description">Assaisonné à la truffe sur lit de caviar</p>
+                        </div>
+                        <div class="restaurant__item-price">20€</div>
+                    </div>
+                </article>
+                <article class="restaurant__category">
+                    <div class="restaurant__category-title">
+                        <h2>Plats</h2>
+                    </div>
+                    <div class="restaurant__item">
+                        <div class="restaurant__item-info">
+                            <h3 class="restaurant__item-title">Filet de bœuf aux herbes</h3>
+                            <p class="restaurant__item-description">Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        <div class="restaurant__item-price">40€</div>
+                    </div>
+                    <div class="restaurant__item">
+                        <div class="restaurant__item-info">
+                            <h3 class="restaurant__item-title">Parmentier de queue de bœuf</h3>
+                            <p class="restaurant__item-description">À la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div class="restaurant__item-price">35€</div>
+                    </div>
+                    <div class="restaurant__item">
+                        <div class="restaurant__item-info">
+                            <h3 class="restaurant__item-title">Filet de turbot</h3>
+                            <p class="restaurant__item-description">Aux agrumes</p>
+                        </div>
+                        <div class="restaurant__item-price">44€</div>
+                    </div>
+                </article>
+                <article class="restaurant__category">
+                    <div class="restaurant__category-title">
+                        <h2>Desserts</h2>
+                    </div>
+                    <div class="restaurant__item">
+                        <div class="restaurant__item-info">
+                            <h3 class="restaurant__item-title">Paris-Brest</h3>
+                            <p class="restaurant__item-description">Revisité</p>
+                        </div>
+                        <div class="restaurant__item-price">18€</div>
+                    </div>
+                    <div class="restaurant__item">
+                        <div class="restaurant__item-info">
+                            <h3 class="restaurant__item-title">Macaron au chocolat d'exception</h3>
+                            <p class="restaurant__item-description">Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div class="restaurant__item-price">22€</div>
+                    </div>
+                    <div class="restaurant__item">
+                        <div class="restaurant__item-info">
+                            <h3 class="restaurant__item-title">Mousse au chocolat</h3>
+                            <p class="restaurant__item-description">Au piment d'Espelette et à la truffe noire</p>
+                        </div>
+                        <div class="restaurant__item-price">23€</div>
+                    </div>
+                </article>
+                <div class="restaurant__order">
+                    <a class="restaurant__order-button">Commander</a>
                 </div>
             </div>
-        </header>
-        <main>
-            <section>
-                <div>
-                    <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
-                    <div>
-                        <i class="fa-regular fa-heart"></i>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <h1>La palette du goût</h1>
-                </div>
-                <div>
-                    <article>
-                    <div>
-                        <h2>Entrées</h2>
-                    </div>
-                    <div>
-                        <div>
-                            <H3>Fricassée d'escargots</H3>
-                            <p>Au piment d'Espelette</p>
-                        </div>
-                        <div>25€</div>
-                    </div>
-                    <div>
-                        <div>
-                            <H3>Foie gras de canard mi-cuit</H3>
-                            <p>Et ses copeaux de truffe noire</p>
-                        </div>
-                        <div>35€</div>
-                    </div>
-                    <div>
-                        <div>
-                            <H3>Œuf au plat</H3>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
-                        </div>
-                        <div>20€</div>
-                    </div>
-                    </article>
-                    <article>
-                        <div>
-                            <h2>Plats</h2>
-                        </div>
-                        <div>
-                            <div>
-                                <H3>Filet de bœuf aux herbes</H3>
-                                <p>Accompagné de sa ribambelle de légumes</p>
-                            </div>
-                            <div>40€</div>
-                        </div>
-                        <div>
-                            <div>
-                                <H3>Parmentier de queue de bœuf</H3>
-                                <p>À la truffe noire sur sa purée de panais</p>
-                            </div>
-                            <div>35€</div>
-                        </div>
-                        <div>
-                            <div>
-                                <H3>Filet de turbot</H3>
-                                <p>Aux agrumes</p>
-                            </div>
-                            <div>44€</div>
-                        </div>
-                    </article>
-                    <article>
-                        <div>
-                            <h2>Desserts</h2>
-                        </div>
-                        <div>
-                            <div>
-                                <H3>Paris-Brest</H3>
-                                <p>Revisité</p>
-                            </div>
-                            <div>18€</div>
-                        </div>
-                        <div>
-                            <div>
-                                <H3>Macaron au chocolat d'exception</H3>
-                                <p>Et glace à la vanille de Madagascar</p>
-                            </div>
-                            <div>22€</div>
-                        </div>
-                        <div>
-                            <div>
-                                <H3>Mousse au chocolat</H3>
-                                <p>Au piment d'Espelette et à la truffe noire</p>
-                            </div>
-                            <div>23€</div>
-                        </div>
-                    </article>
-                    <div>
-                        <button>Commander</button>
-                    </div>
-                </div>
-            </section>            
-        </main>
-        <footer>
-            <div>
-                <div>
-                    <img src="assets/images/logo/ohmyfood@2x.svg">
-                </div>
-                <div>
-                    <ul>
-                        <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                        <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                        <li><a href="#">Mention légales</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                </div>
-        </footer>
-    </div>
+        </section>                           
+    </main>
+    <footer class="footer">
+        <div class="footer__content">
+            <div class="footer__logo">
+                <img src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
+            </div>
+            <div class="footer__links">
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Mentions légales</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
