--- a/restaurants/La_palette_du_goût.html
+++ b/restaurants/La_palette_du_goût.html
@@ -34,7 +34,7 @@
                 </button>
             </div>           
             <div class="restaurant__menu">
-                <article class="restaurant__category">
+                <article class="restaurant__category fade-in">
                     <div class="restaurant__category-title">
                         <h2>ENTRÉES</h2>
                     </div>
@@ -63,7 +63,7 @@
                         <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
-                <article class="restaurant__category">
+                <article class="restaurant__category fade-in--second">
                     <div class="restaurant__category-title">
                         <h2>Plats</h2>
                     </div>
@@ -92,7 +92,7 @@
                         <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
-                <article class="restaurant__category">
+                <article class="restaurant__category fade-in--third">
                     <div class="restaurant__category-title">
                         <h2>Desserts</h2>
                     </div>
@@ -137,7 +137,7 @@
                     <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                     <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Mentions légales</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
+                    <li class="footer__item"><a href="mailto:ohmyfood-contact@gmail.com" class="footer__link">Contact</a></li>
                 </ul>
             </div>
         </div>
