--- a/restaurants/Le_délice_des_sens.html
+++ b/restaurants/Le_délice_des_sens.html
@@ -137,7 +137,7 @@
                     <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                     <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Mentions légales</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
+                    <li class="footer__item"><a href="mailto:ohmyfood-contact@gmail.com" class="footer__link">Contact</a></li>
                 </ul>
             </div>
         </div>
