--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                 <ul class="footer__list">
                     <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-utensils"></i>Proposer un restaurants</a></li>
                     <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">Mentions légales</a></li>
-                    <li class="footer__item"><a href="mailto:ohmyfood-contact@gmail.com" class="footer__link">Contact</a></li>
+                    <li class="footer__item footer__item--mention"><a href="#" class="footer__link">Mentions légales</a></li>
+                    <li class="footer__item footer__item--contact"><a href="mailto:ohmyfood-contact@gmail.com" class="footer__link">Contact</a></li>
                 </ul>
             </div>
         </div>
