--- a/restaurants/La_palette_du_goût.html
+++ b/restaurants/La_palette_du_goût.html
@@ -7,7 +7,7 @@
     
     <title>La palette du goût - Ohmyfood</title>
 
-    <link rel="stylesheet" href="../assets/sass/main.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
