--- a/restaurants/À_la_française.html
+++ b/restaurants/À_la_française.html
@@ -7,7 +7,7 @@
     
     <title>À la française - Ohmyfood</title>
 
-    <link rel="stylesheet" href="../assets/sass/main.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
