--- a/restaurants/La_note_enchantée.html
+++ b/restaurants/La_note_enchantée.html
@@ -7,7 +7,7 @@
     
     <title>La note enchantée - Ohmyfood</title>
 
-    <link rel="stylesheet" href="../assets/sass/main.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -19,7 +19,7 @@
         <nav class="header__nav">
             <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
         </nav>
-            <img class="header__logo" src="../assets/css/style.css" alt="logo de ohmyfood">
+            <img class="header__logo" src="../assets/images/logo/ohmyfood.png" alt="logo de ohmyfood">
     </header>
     <main class="main">
         <div class="banner">            
